--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,46 @@
 {
+  "version": 2,
+  "name": "beatmania-style-game",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "zeroConfig": true
+      }
+    }
+  ],
   "functions": {
     "api/songs.js": {
-      "memory": 512
+      "memory": 512,
+      "maxDuration": 10
     }
   },
+  "routes": [
+    {
+      "src": "/audio/(.*)",
+      "dest": "/public/audio/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000",
+        "Access-Control-Allow-Origin": "*"
+      }
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|json|html|png|jpg|jpeg|gif|ico|svg|mp3|wav|ogg))",
+      "dest": "/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/api/(.*)",
@@ -21,6 +58,42 @@
           "value": "Content-Type, Authorization"
         }
       ]
+    },
+    {
+      "source": "/audio/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Content-Type",
+          "value": "audio/mpeg"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.(mp3|wav|ogg))",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "audio/mpeg"
+        },
+        {
+          "key": "Accept-Ranges",
+          "value": "bytes"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/audio/(.*)",
+      "destination": "/public/audio/$1"
     }
   ]
 }
